Fixed z-indexes

--- a/usr/libexec/pi-web-agent/css/bootstrap.css
+++ b/usr/libexec/pi-web-agent/css/bootstrap.css
@@ -3982,7 +3982,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar {
   position: relative;
-  z-index: 0;
+  z-index: 1000;
   min-height: 60px;
   margin-bottom: 5px;
   margin-top: 15px;
