--- a/usr/libexec/pi-web-agent/css/thumbnailviewer.css
+++ b/usr/libexec/pi-web-agent/css/thumbnailviewer.css
@@ -10,6 +10,7 @@ visibility: hidden;
 z-index: 10;
 cursor: hand;
 cursor: pointer;
+z-index: 2000;
 }
 
 #thumbBox .footerbar{ /*Footer DIV of thumbbox that contains "close" link */
